Draft Very soon Done

--- a/src/pages/CreateCrewmate.css
+++ b/src/pages/CreateCrewmate.css
@@ -81,6 +81,11 @@
   margin-top: 10px;
 }
 
+.loading {
+  color: white;
+  margin-top: 10px;
+}
+
 .create-crewmate-image {
   max-width: 200px;
   display: block;
